log
Fri Mar 26 18:18:23 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   List* lista = (List*) malloc(sizeof(List));
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 18:23:38 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fa1bc68
Fri Mar 26 18:31:36 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d683a98
